
	* Fix compilation of eina_semaphore_lock() (Windows port)

2012-01-20  Gustavo Barbieri

	* Add eina_model data type (generic hierarchy data access).

2011-12-30  Vincent Torri

	* Fix Eina_RWLock code on Windows > XP.

2012-01-29  Tom Hacohen

	* Added EINA_C_ARRAY_LENGTH, a macro that returns  the length of a
	standard C array.

2012-01-31  Tom Hacohen

	* Added an Eina_Stringshare type. It's just a typedef of "const char"
	this is a same kind of visual hint for the purpose of the pointer,
	but again, the two types are interchangeable.

2012-02-17  Cedric Bail

	* Fix forgotten initialization of eina list count during eina_list_split_list.

2012-02-22  Cedric Bail

	* Add eina_file_stat.

2012-02-27  Alexandre Becoulet

	* Add faster implementation of Eina_Rbtree.

2012-03-07  Cedric Bail

	* Fix leak of Eina_File.

2012-03-14  Cedric Bail

	* Fix a dead lock in Eina_File.

2012-03-16  Raphael Kubo da Costa

	* Adjust Valgrind's CFLAGS to fix the build when it is in a non-default location.

2012-03-29 Iván Briano

	* Avoid freeing old data before returning it on eina_hash_set().

2012-03-31  Vincent Torri

	* Add missing API eina_file_map_faulted() on Windows. Does nothing
	for now.

2012-04-19  Cedric Bail

	* Make it possible to force the number of detected CPU on a system.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-04-26  Cedric Bail

	* Add backtrace support Eina_Log.

2012-04-30  Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-06  Cedric Bail

	* Fix a rounding issue near 1.0 for eina_f32p32_cos and eina_f32p32_sin.

2012-05-08  Cedric Bail

	* Add eina_file_map_lines to iterate on lines of a mapped file.

2012-05-17  Albin Tonnerre

	* Fix portability issue of Eina_Value on ARM and PPC.
	* Fix portability issue of Eina_Value test on Itanium.

2012-05-23 Carsten Haitzler (The Rasterman)

        * Fix global_faulty faulty flag in eina_file to be set to 0
        initially rather than be random memory garbage.
